upd: contact session

--- a/index.html
+++ b/index.html
@@ -170,31 +170,22 @@
       </div>
       <div class="social-media">
         <a href="#" class="social-media-link">
-          <i class="fa-brands fa-square-whatsapp"></i>
+          <img src="./icons/phone2.svg" alt="Service 1">
+          <span>+ 55 22 91234-5678</span>
         </a>
         <a href="#" class="social-media-link">
-          <i class="fab fa-instagram-square"></i>
+          <img src="./icons/Vector-4.svg" alt="Service 1">
+          <span>isadoraran.adv@gmail.com</span>
         </a>
-        <a href="https://www.linkedin.com/in/bernardoknoblauch/" class="social-media-link">
-          <i class="fab fa-linkedin"></i>
+        <a href="#" class="social-media-link">
+          <img src="./icons/instagram.svg" alt="Service 1">
+          <span>@ isaran.adv</span>
         </a>
       </div>
-      <form class="form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" placeholder="Enter your message"></textarea>
-        <div style="text-align:center">
-          <input class="btn" type="submit" value="ENVIAR"></input>
-        </div>
-      </form>
     </div>
   </section>
 
   <section class="footer">
-    <div class="footer-container container">
       <p class="copyright">Copyright &copy; BEKNO 2021.
         <br> All rights reserved.
       </p>
