upd: icon color

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <div class="scale">
         <hr>
-        <img src="./icons/scale.svg" alt="Service 1">
+        <img src="./icons/scale_white.svg" alt="Service 1">
         <hr>
       </div>
       <div class="social-media">
