upd: about section

--- a/index.html
+++ b/index.html
@@ -83,13 +83,15 @@
         <img src="./icons/scale.svg" alt="Service 1">
         <hr>
       </div>
-      <div class="picture">
-        <img src="./images/FotoIsa.jpg" alt="">
+      <div class="sidebyside">
+        <div class="picture">
+          <img src="./images/FotoIsa.jpg" alt="">
+        </div>
+        <p style="max-width: 500px; padding-top: 2rem;">
+          Especialista e amante do Direito Previdenciário. O grande apreço e admiração por essa área nos
+          uniu e hoje atuamos firmemente no previdenciário, com respeito e cuidado por cada história que chega até nós.
+        </p>
       </div>
-      <p style="max-width: 500px;">
-        Especialista e amante do Direito Previdenciário. O grande apreço e admiração por essa área nos
-        uniu e hoje atuamos firmemente no previdenciário, com respeito e cuidado por cada história que chega até nós.
-      </p>
     </div>
   </section>
 
