upd: wpp button

--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
           <li class="navbar-item"><a class="navbar-link" href="#about">SOBRE</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#services">SERVIÇOS</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#contact">CONTATO</a></li>
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <a class="navbar-link" id="wpp" href="#home">WHATSAPP
               <i class="fa-brands fa-whatsapp" style="padding-left: 20px; color: green; font-size: 30px;"></i>
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
   </header>
+
+  <a class="whatsapp" href="">
+    <img src="./icons/whatsapp.svg" alt="Service 1">
+  </a>
 
   <section class="hero" id="home">
     <div class="container">
