upd: font formating and navigation

--- a/index.html
+++ b/index.html
@@ -76,11 +76,16 @@
         transparência e eficiência são predicados que destacamos em nossa atuação. Confiamos na segurança que nosso
         trabalho traz e sabemos o que nosso papel é facilitar a vida dos nossos clientes.
       </p>
+      <div class="hero-buttons">
+        <a class="btn-wpp" href="#about2">
+          EQUIPE</a>
+      </div>
+    </div>
     </div>
   </section>
 
-  <section class="about" id="about">
-    <div class="about-container container">
+  <section class="about2" id="about2">
+    <div class="about2-container container">
       <h1>ISADORA ARAN</h1>
       <div class="scale">
         <hr>
@@ -95,37 +100,6 @@
           Especialista e amante do Direito Previdenciário. O grande apreço e admiração por essa área nos
           uniu e hoje atuamos firmemente no previdenciário, com respeito e cuidado por cada história que chega até nós.
         </p>
-      </div>
-    </div>
-  </section>
-
-  <section class="services" id="services">
-    <div class="services-container container">
-      <div class="heading">
-        <h1>COMO TRABALHAMOS</h1>
-        <div class="scale">
-          <hr>
-          <img src="./icons/scale.svg" alt="Service 1">
-          <hr>
-        </div>
-      </div>
-      <div class="service">
-        <img src="./icons/handshake.svg" alt="Service 1">
-        <h3>Responsabilidade</h3>
-        <p>Respeitamos cada história que chega até nós. Por isso, trabalhamos com zelo, dedicação e responsabilidade, a
-          fim de encontrarmos uma solução que lhe garanta uma vida digna e tranquila.</p>
-      </div>
-      <div class="service">
-        <img src="./icons/champion.svg" alt="Service 1">
-        <h3>Experiência</h3>
-        <p>Estamos preparadas para te ajudar em qualquer situação previdenciária. Sabemos exatamente o que fazer para
-          garantir o melhor benefício para você.</p>
-      </div>
-      <div class="service">
-        <img src="./icons/clock.svg" alt="Service 1">
-        <h3>Paciência</h3>
-        <p>Não se preocupe, embora o Direito Previdenciário seja complexo, nós iremos te explicar todo o processo com
-          muita paciência e tirar todas as suas dúvidas.</p>
       </div>
     </div>
   </section>
@@ -160,6 +134,37 @@
         <p>Frequentemente o INSS concede benefícios com valores errados. Por isso, se você já recebeu algum benefício e
           acredita que o valor está equivocado, nosso trabalho é realizar uma detalhada análise do seu caso, para
           identificar o que precisa ser revisado, e, por consequência, aumentar o valor do benefício.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="servics" id="servics">
+    <div class="servics-container container">
+      <div class="heading">
+        <h1>COMO TRABALHAMOS</h1>
+        <div class="scale">
+          <hr>
+          <img src="./icons/scale.svg" alt="Service 1">
+          <hr>
+        </div>
+      </div>
+      <div class="servic">
+        <img src="./icons/handshake.svg" alt="Service 1">
+        <h3>Responsabilidade</h3>
+        <p>Respeitamos cada história que chega até nós. Por isso, trabalhamos com zelo, dedicação e responsabilidade, a
+          fim de encontrarmos uma solução que lhe garanta uma vida digna e tranquila.</p>
+      </div>
+      <div class="servic">
+        <img src="./icons/champion.svg" alt="Service 1">
+        <h3>Experiência</h3>
+        <p>Estamos preparadas para te ajudar em qualquer situação previdenciária. Sabemos exatamente o que fazer para
+          garantir o melhor benefício para você.</p>
+      </div>
+      <div class="servic">
+        <img src="./icons/clock.svg" alt="Service 1">
+        <h3>Paciência</h3>
+        <p>Não se preocupe, embora o Direito Previdenciário seja complexo, nós iremos te explicar todo o processo com
+          muita paciência e tirar todas as suas dúvidas.</p>
       </div>
     </div>
   </section>
