upd: já nem sei

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar-container container">
       <a href="/" class="home-link">
         <div class="navbar-logo">
-          <p>Isadora Aran</p>
+          <img src="./images/logosite.svg" alt="Service 1">
         </div>
       </a>
       <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu"
@@ -76,7 +76,7 @@
         transparência e eficiência são predicados que destacamos em nossa atuação. Confiamos na segurança que nosso
         trabalho traz e sabemos o que nosso papel é facilitar a vida dos nossos clientes.
       </p>
-      <div class="hero-buttons">
+      <div class="about-buttons" style="padding-top: 2rem;">
         <a class="btn-wpp" href="#about2">
           EQUIPE</a>
       </div>
@@ -100,6 +100,10 @@
           Especialista e amante do Direito Previdenciário. O grande apreço e admiração por essa área nos
           uniu e hoje atuamos firmemente no previdenciário, com respeito e cuidado por cada história que chega até nós.
         </p>
+      </div>
+      <div class="about-buttons" style="padding: 2rem;">
+        <a class="btn-wpp" href="#services">
+          SAIBA MAIS</a>
       </div>
     </div>
   </section>
